tdf#122136: select first element if there's at least one

See bt from https://bugs.documentfoundation.org/attachment.cgi?id=147594

Change-Id: Ibf031b8024aa4952e2d3263a445cafdb3c031390